# exambuilder

./: .gitignore  CLAUDE.md  Cargo.toml  DATASTRUCT.md  DEVPLAN.md  FEATURES.md  GUIDE.md  README.md  ROADMAP.md  SKILL.md  TEST_GUIDE.md  debug-workflow.md  deploy.sh  domains.toml  exam_exambuilder.md  exam_exambuilder.toml  flake.nix  go.mod  go.sum  justfile  shell.nix  todo.md
.context/: session-2026-03-23.md
assets/: embed.go
cmd/kgate-daemon/: main.go
cmd/kgatectl/: main.go
crates/kgate/: Cargo.toml
crates/kgate-core/: Cargo.toml
crates/kgate-core/src/: adaptive.rs  analyzer.rs  anthropic.rs  db.rs  dedup.rs  grader.rs  harvest.rs  lib.rs  llm_generator.rs  llm_grader.rs  models.rs  parser.rs  prompts.rs  question_validator.rs  scanner.rs  spaced_repetition.rs
crates/kgate-core/tests/: full_pipeline.rs  llm_generation.rs
crates/kgate/src/: domains.rs  exam.rs  main.rs  scan.rs  sound.rs
crates/kgate/src/cli/: bookmarks.rs  catalog.rs  debt.rs  generation.rs  mod.rs  progress.rs  project.rs  selftest.rs
crates/kgate/src/exam/: helpers.rs  listing.rs  mod.rs  review.rs  taking.rs  voice_exam.rs
crates/kgate/src/voice/: config.rs  mod.rs  setup.rs  stt.rs  tts.rs
crates/kgate/tests/: integration.rs
docs/: DEV_PLAN.md  FEATURE_PLAN.md  GAMIFICATION_DESIGN.md  GAMIFICATION_DEV_PLAN.md  GUI_DESIGN.md  POSSIBLE_FEATURES.md  SETUP.md  WIKI.md
gui/: app.go  httpbridge.go  main.go  wails.json
gui/frontend/: index.html  package-lock.json  package.json  vite.config.js
gui/migrations/: 002_journal_and_analytics.sql
internal/config/: config.go
internal/daemon/: server.go
internal/db/: db.go  journal.go  knowledge.go  models.go  queries.go
internal/exam/: achievement_patterns.go  grader.go  grader_test.go  parser.go  parser_test.go  parser_toml.go
internal/gamification/: achievement_seed.go  achievements.go  avatar.go  daily.go  equipment.go  hints.go  shop.go  shop_seed.go  wallet.go
internal/llm/: client.go  generator.go  (+4 more)
migrations/: 001_initial.sql  002_history_badges.sql  003_knowledge_profile.sql  004_spaced_repetition.sql  005_enhanced_stats.sql  006_sprint_ids.sql
nix/: hm-module.nix
scripts/: dev-rebuild.sh  setup-ollama.sh
systemd/: README.md  kgate-daemon.service
(+41 files in other folders)
