[workspace]
resolver = "2"
members = [
    "crates/kgate",
    "crates/kgate-core",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["ljsm"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Errors
thiserror = "1"
anyhow = "1"

# Hashing
sha2 = "0.10"

# CLI UX
console = "0.15"
dialoguer = "0.11"
indicatif = "0.17"
crossterm = "0.28"

# Audio
rodio = "0.19"

# UUID
uuid = { version = "1", features = ["v4"] }

# Regex
regex = "1"

# Config
toml = "0.8"

# Random
rand = "0.8"

# HTTP client (for Anthropic API)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Async trait support
async-trait = "0.1"

# Internal
kgate-core = { path = "crates/kgate-core" }
