[package]
name = "kgate-core"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
sha2.workspace = true
regex.workspace = true
reqwest.workspace = true
async-trait.workspace = true

[dev-dependencies]
tempfile = "3"
