[package]
name = "kgate"
version.workspace = true
edition.workspace = true

[[bin]]
name = "kgate"
path = "src/main.rs"

[dependencies]
kgate-core.workspace = true
tokio.workspace = true
clap.workspace = true
anyhow.workspace = true
console.workspace = true
dialoguer.workspace = true
indicatif.workspace = true
serde_json.workspace = true
chrono.workspace = true
serde.workspace = true
crossterm.workspace = true
rodio.workspace = true
uuid.workspace = true
regex.workspace = true
toml.workspace = true
rand.workspace = true
dirs = "5"
once_cell = "1"
which = "7"

[dev-dependencies]
tempfile = "3"
